plugins/colorpicker: use GL_RGBA instead of GL_RGB, to support OpenGL ES

OpenGL ES only supports GL_RGBA.

BUG: 518770
(cherry picked from commit 64ccacae99b2a67e2f58b05cbd45eb6f9223a6f2)